--- a/public/demo.css
+++ b/public/demo.css
@@ -28,6 +28,7 @@
 
 .tab-panel {
   display: none;
+  background: rgb(253, 253, 253);
   padding: 1.5rem;
 }
 
